--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,13 @@
 </head>
 <body>
 
+    <!-- Floating background bubbles -->
+    <div class="bubble small"></div>
+    <div class="bubble medium"></div>
+    <div class="bubble large"></div>
+    <div class="bubble xlarge"></div>
+    <div class="bubble xxlarge"></div>
+
     <!-- Splash Screen -->
     <div id="splash">
         <h1>BuzzTub</h1>
