--- a/templates/base.html
+++ b/templates/base.html
@@ -49,13 +49,13 @@
   </div>
 
   <!-- Main content -->
-  <div id="main-content" class="container" style="display:none;">
+  <div id="main-content" class="container">
     {% block content %}{% endblock %}
   </div>
 
   <!-- Footer -->
   <footer>
-    <p>&copy; {{ datetime.utcnow().year }} BuzzTub. All rights reserved.</p>
+    <p>© 2025 BuzzTub. All rights reserved.</p>
   </footer>
 
   <!-- Splash JS -->
