--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -1,32 +1,35 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="row justify-content-center">
-  <div class="col-md-8">
-    <h2 class="text-center mb-4">🏆 BuzzTub Leaderboard</h2>
-    <table class="table table-striped table-bordered text-center shadow-sm">
-      <thead class="table-dark">
+
+<div class="container">
+  <h1 class="neon-text">Top Creators</h1>
+
+  {% if leaders %}
+    <table class="card" style="width:100%; border-collapse: collapse;">
+      <thead>
         <tr>
-          <th>Rank</th>
-          <th>Creator</th>
-          <th>Subscribers</th>
+          <th style="text-align:left; padding:0.5rem;">Rank</th>
+          <th style="text-align:left; padding:0.5rem;">Creator</th>
+          <th style="text-align:left; padding:0.5rem;">Subscribers</th>
         </tr>
       </thead>
       <tbody>
-        {% if leaders %}
-          {% for i, leader in enumerate(leaders, start=1) %}
+        {% for leader in leaders %}
           <tr>
-            <td>{{ i }}</td>
-            <td>{{ leader.username }}</td>
-            <td>{{ leader.sub_count }}</td>
+            <td style="padding:0.5rem;">{{ loop.index }}</td>
+            <td style="padding:0.5rem;">
+              <a href="{{ url_for('user_profile', username=leader.username) }}">
+                {{ leader.username }}
+              </a>
+            </td>
+            <td style="padding:0.5rem;">{{ leader.sub_count }}</td>
           </tr>
-          {% endfor %}
-        {% else %}
-          <tr>
-            <td colspan="3">No creators yet. Be the first to upload and gain subscribers!</td>
-          </tr>
-        {% endif %}
+        {% endfor %}
       </tbody>
     </table>
-  </div>
+  {% else %}
+    <p>No subscriptions yet. Be the first to subscribe!</p>
+  {% endif %}
 </div>
+
 {% endblock %}
