--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,20 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="row justify-content-center">
-  <div class="col-md-6">
-    <h2 class="text-center mb-4">Create Your BuzzTub Account</h2>
-    <form method="POST" action="{{ url_for('signup') }}">
-      <div class="mb-3">
-        <label for="username" class="form-label">Username</label>
-        <input type="text" class="form-control" id="username" name="username" required>
-      </div>
-      <div class="mb-3">
-        <label for="password" class="form-label">Password</label>
-        <input type="password" class="form-control" id="password" name="password" required>
-      </div>
-      <button type="submit" class="btn btn-success w-100">Sign Up</button>
-    </form>
-    <p class="mt-3 text-center">Already have an account? <a href="{{ url_for('login') }}">Login here</a></p>
-  </div>
+
+<div class="container">
+  <h1 class="neon-text">Signup</h1>
+
+  <form method="post" class="card">
+    <label for="username">Choose a Username</label>
+    <input type="text" id="username" name="username" required>
+
+    <label for="password">Choose a Password</label>
+    <input type="password" id="password" name="password" required>
+
+    <button type="submit" class="btn">Signup</button>
+  </form>
+
+  <p>Already have an account? <a href="{{ url_for('login') }}">Log in here</a>.</p>
 </div>
+
 {% endblock %}
